--- a/composer.json
+++ b/composer.json
@@ -71,5 +71,11 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "git",
+            "url": "git@github.com:rxcod9/nova.git"
+        }
+    ]
 }
