--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "role": "Tech Lead & Architect"
     }],
     "require": {
-        "php": "^8.0.2",
+        "php": "^7.3|^8.0",
         "cebe/php-openapi": "^1.5",
         "darkaonline/l5-swagger": "^7.0|^8.0",
         "illuminate/support": "^7|^8|^9",
